final adaptions